# CP-Project

./: CMakeLists.txt  README.md  borabora_1_out.ppm  borabora_1_out_test.ppm
include/: histogram_eq_parallel.h  template_example.h
libwb/: CMakeLists.txt  README.md  appveyor.yml  compile_commands.json  sources.cmake  wb.h  wbArg.cpp  wbArg.h  wbAssert.h  wbCUDA.cpp  wbCast.h  wbComparator.h  wbDataset.cpp  wbDataset.h  wbDataset_test.cpp  wbDirectory.cpp  wbExit.cpp  wbExport.cpp  wbExport.h  wbFile.cpp  wbFile.h  wbImage.cpp  wbImage.h  wbImport.cpp  wbImport.h  wbInit.cpp  wbLogger.cpp  wbLogger.h  wbMD5.h  wbMPI.cpp  wbMPI.h  wbMalloc.h  wbPPM.cpp  wbPath.cpp  wbPath.h  wbSolution.cpp  wbSolution.h  wbSparse.cpp  wbSparse.h  wbString.h  (+5 more)
report/: acmart.cls  refs.bib  report.tex
scripts/: README.md  build.sh
src/: histogram_eq.cpp  histogram_eq_cuda.cu  histogram_eq_parallel.cpp  main.cpp
src/parallel/: histogram_eq.cpp  main.cpp
test/: CMakeLists.txt  histogram_eq_test.cpp  template_test.cpp
